<resources>
    <string name="app_name">FiCl</string>

    <string name="sign_up_question">Don`t have account?</string>

    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="scores">Scores</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="select_eating_habits">Select eating habits</string>
    <string name="drying">Drying</string>
    <string name="maintenance">Maintenance</string>
    <string name="mass">Mass</string>
    <string name="button_sign_up">Register</string>
    <string name="button_log_in">Next</string>
    <string name="button_scores">Next</string>
    <string name="button_next">Next</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="add">add</string>
    <string name="select_activity">Select Activity</string>
    <string name="next">Next</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="nickname">Nickname</string>
    <string name="weight_show">Weight:</string>
    <string name="height_show">Height:</string>
    <string name="age_show">Age:</string>
    <string name="style_training_show">Style training:</string>
    <string name="metabolism_show">Metabolism:</string>
    <string name="breakfast">Breakfast</string>
    <string name="_0_0_0">0/0/0</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="other">Other</string>
    <string name="calories_show">Calories:</string>
    <string name="protein_show">Protein:</string>
    <string name="fat_show">Fat:</string>
    <string name="carbohydrate_show">Carbohydrate:</string>
    <string name="title">Title</string>
    <string name="_0">0</string>
    <string name="activity">Activity</string>

</resources>