<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateInDiaryActivity">

    <TextView
        android:id="@+id/name_product_for_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightInputLayout_update"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/weight"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_product_for_update"
        app:startIconDrawable="@drawable/ic_weight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_weight_for_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_weight_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button_update_product"
        android:onClick="updateProductInDiary"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="@+id/weightInputLayout_update"
        app:layout_constraintStart_toStartOf="@+id/weightInputLayout_update"
        app:layout_constraintTop_toBottomOf="@+id/weightInputLayout_update" />

    <Button
        android:id="@+id/delete_weight_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button_delete_product"
        android:onClick="deleteProductInDiary"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="@+id/update_weight_button"
        app:layout_constraintStart_toStartOf="@+id/update_weight_button"
        app:layout_constraintTop_toBottomOf="@+id/update_weight_button" />
</androidx.constraintlayout.widget.ConstraintLayout>