<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity"
    android:background="@color/bg_update_product">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout_update"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="80dp"
        android:hint="@string/name"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_add_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNameProduct_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manufacturerInputLayout_update"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/manufacturer"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout_update"
        app:startIconDrawable="@drawable/ic_manufacturer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edManufacturerProduct_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/proteinInputLayout_update"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/protein"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacturerInputLayout_update"
        app:startIconDrawable="@drawable/ic_data_usage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edProteinProduct_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fatInputLayout_update"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/fat"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteinInputLayout_update"
        app:startIconDrawable="@drawable/ic_data_usage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edFatProduct_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/carbohydrateInputLayout_update"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/carbohydrate"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fatInputLayout_update"
        app:startIconDrawable="@drawable/ic_data_usage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edCarbohydrateProduct_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button_update_product"
        android:onClick="updateProduct"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="@+id/carbohydrateInputLayout_update"
        app:layout_constraintStart_toStartOf="@+id/carbohydrateInputLayout_update"
        app:layout_constraintTop_toBottomOf="@+id/carbohydrateInputLayout_update" />

    <Button
        android:id="@+id/deleteProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_delete_product"
        android:onClick="deleteProduct"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="@+id/updateProductButton"
        app:layout_constraintStart_toStartOf="@+id/updateProductButton"
        app:layout_constraintTop_toBottomOf="@+id/updateProductButton" />

</androidx.constraintlayout.widget.ConstraintLayout>